--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         </H1>
 
         <H2 Class="White-Text">
-            Currently Winning :
+            Game Status
             <Span Id="Status"></Span>
         </H2>
 
